<resources>
    <string name="app_name">Chemas</string>
    <string name="Titulos">Libreria</string>
    <string name="Libros">Libros</string>
    <string name="Autores">Autores</string>
    <string name="about">Acerca de...</string>
    <string name="title_activity_2">Activity2</string>
    <string name="autores">Autores</string>
    <string name="generos">Generos</string>
    <string name="bookName">Nombre de Libro</string>
    <string name="bookEditoria">Editorial</string>
    <string name="bookDate">Fecha</string>
    <string name="bookPage">No. Paginas</string>
    <string name="autorName">Nombre</string>
    <string name="autorLastName">Apellidos</string>
    <string name="autorNacionalidad">Nacionalidad</string>
    <string name="edad">Edad</string>
</resources>